Yangi o‘zgartirishlar qo‘shildi

--- a/DevFolio/assets/css/main.css
+++ b/DevFolio/assets/css/main.css
@@ -811,7 +811,7 @@ section,
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: var(--accent-color);
+  background-color: gold;
 }
 
 .about .about-me h4 {
